--- a/readme
+++ b/readme
@@ -1,5 +1,5 @@
 
-![Web-developer](https://www.canva.com/design/DAFTk-8Qiz0/4XXvShyBQd2mkQmqgZJ7PA/view?utm_content=DAFTk-8Qiz0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton)
+[![Web-developer](https://www.canva.com/design/DAFTk-8Qiz0/4XXvShyBQd2mkQmqgZJ7PA/view?utm_content=DAFTk-8Qiz0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton)]
     
 ## Welcome to my world <img src="https://github.com/TheDudeThatCode/TheDudeThatCode/blob/master/Assets/Earth.gif" width="24px">
 
